--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="top">
     <!-- data-st-tagrget 要前往元素的ID名稱-->
     <!-- data-st-duration 捲動所花的時間(毫秒)-->
     <nav>
         <a href="" data-st-tagrget="area1" data-st-duration="1000">連結1</a>
-        <a href="" data-st-tagrget="area2" data-st-duration="2000">連結2</a>
-        <a href="" data-st-tagrget="area3" data-st-duration="3000">連結3</a>
+        <a href="" data-st-tagrget="area2" data-st-duration="2000" data-st-offset="100">連結2</a>
+        <a href="" data-st-tagrget="area3" data-st-duration="3000" data-st-offset="100">連結3</a>
     </nav>
-    <section id="area1">連結1</section>
-    <section id="area2">連結2</section>
-    <section id="area3">連結3</section>
+    <section id="area1">區塊1</section>
+    <section id="area2">區塊2</section>
+    <section id="area3">區塊3</section>
+
+    <a id="arrow" data-st-tagrget="top" data-st-duration="800" data-st-top="300" data-st-time="1000"></a>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./main.js"></script>
