--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body id="top">
     <!-- data-st-tagrget 要前往元素的ID名稱-->
     <!-- data-st-duration 捲動所花的時間(毫秒)-->
+    <!-- data-st-offset 位移的大小 -->
     <nav>
         <a href="" data-st-tagrget="area1" data-st-duration="1000">連結1</a>
         <a href="" data-st-tagrget="area2" data-st-duration="2000" data-st-offset="100">連結2</a>
@@ -17,7 +18,8 @@
     <section id="area1">區塊1</section>
     <section id="area2">區塊2</section>
     <section id="area3">區塊3</section>
-
+    <!-- data-st-top 箭頭要出現的高度  -->
+    <!-- data-st-time 特效持續的時間 -->
     <a id="arrow" data-st-tagrget="top" data-st-duration="800" data-st-top="300" data-st-time="1000"></a>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
